# inbox

./: .gitignore  .sqlfluff  CLAUDE.md  COPYING  Cargo.toml  Makefile  README.md  config.example.toml  tarpaulin.toml
src/: config.rs  error.rs  health.rs  lib.rs  log_capture.rs  main.rs  message.rs  resume_task.rs  telemetry.rs  test_helpers.rs  tests_resume_task.rs  tls.rs  url_content.rs
src/adapters/: email.rs  http.rs  mod.rs  reconnect.rs  telegram.rs
src/adapters/email/: tests.rs
src/adapters/telegram/: files.rs  handlers.rs  mod.rs
src/adapters/telegram_media_group/: mod.rs  tests.rs
src/adapters/telegram_notifier/: mod.rs  resume.rs  tests.rs
src/config/: adapters.rs  infra.rs  llm.rs  memory.rs  mod.rs  pipeline.rs  tooling.rs
src/feedback/: mod.rs  tests.rs
src/llm/: builder.rs  chain.rs  chain_tools.rs  free_router.rs  mock.rs  mod.rs  ollama.rs  openrouter.rs  tests.rs  tests_builder.rs  tests_resilience.rs  tests_thinking.rs  tools.rs
src/llm/free_router/: pool.rs
src/llm/free_router/tests/: classifier_tests.rs  dispatch_tests.rs  fixtures.rs  mod.rs  pool_tests.rs
src/llm/openrouter/: tests.rs
src/llm/tools/: builders.rs  mod.rs  runners.rs  tests.rs  tests_runners.rs  tests_search_memory.rs
src/memory/: embed.rs  feedback.rs  mod.rs  queries.rs  search.rs  store_feedback.rs  tests.rs  util.rs
src/output/: mod.rs  org_file.rs  org_patcher.rs  tests_org_patcher.rs
src/pending/: mod.rs  store.rs  tests.rs
src/pending/migrations/: 0001_create_pending_items.sql
src/pipeline/: content_extractor.rs  mod.rs  preprocess.rs  tags.rs  tests.rs  url_classifier.rs  url_extractor.rs  url_fetcher.rs
src/pipeline/context_preload/: mod.rs  tests.rs
src/processing_status/: mod.rs  tests.rs
src/render/: mod.rs  tests.rs  tests_pending.rs
src/web/: attachments.rs  auth.rs  feedback.rs  mod.rs  proxy.rs  tests.rs  tests_proxy.rs  ui.rs
templates/: inbox_nodes.html  inbox_ui.html  login.html  logs.html  logs_entries.html  node.org
tests/: test_main_cli.rs  test_pipeline.rs  test_preload_context.rs  test_resume_task.rs  test_telegram.rs  test_telegram_media.rs  test_url_fetch.rs  test_web.rs
