[package]
name = "inbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "inbox"
path = "src/main.rs"

[lib]
name = "inbox"
path = "src/lib.rs"

[dependencies]
tokio               = { version = "1.49", features = ["full"] }
tokio-util          = { version = "0.7", features = ["compat"] }
futures             = "0.3"
axum                = { version = "0.8", features = ["multipart"] }
tower-http          = { version = "0.6", features = ["auth", "trace"] }
teloxide            = { version = "0.17", features = ["macros"] }
async-imap          = "0.11"
async-native-tls    = "0.6"
reqwest             = { version = "0.13", features = ["json", "stream"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
toml                = "0.8"
askama              = "0.15"
askama_web          = "0.15"
url                 = "2"
regex               = "1"
scraper             = "0.25"
orgize              = "0.10.0-alpha.10"
chrono              = { version = "0.4", features = ["serde"] }
uuid                = { version = "1", features = ["v4"] }
async-trait         = "0.1"
thiserror           = "2"
anyhow              = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
clap                = { version = "4", features = ["derive"] }
metrics             = "0.24"
metrics-exporter-prometheus = { version = "0.18", features = ["http-listener"] }
axum-prometheus     = "0.10"
mime_guess          = "2"
argon2              = { version = "0.6.0-rc.7", features = ["getrandom"] }
rand                = { version = "0.10.0", features = ["std"] }
dashmap             = "6"
bytes               = "1"
mime                = "0.3"
anodized            = "0.1"
tempfile            = "3"
urlencoding         = "2"

[features]
test-helpers = []

[dev-dependencies]
wiremock       = "0.6"
tokio-test     = "0.4"
tempfile       = "3"
tower          = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
inbox          = { path = ".", features = ["test-helpers"] }
teloxide_tests = "0.4.0"

[lints.clippy]
pedantic = "warn"
