[package]
name = "inbox"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Universal inbox daemon for capturing Telegram/HTTP/email content into org-mode with LLM enrichment."
license = "MIT"
readme = "README.md"
keywords = ["inbox", "org-mode", "llm", "telegram", "email"]
categories = ["command-line-utilities"]

[[bin]]
name = "inbox"
path = "src/main.rs"

[lib]
name = "inbox"
path = "src/lib.rs"

[dependencies]
tokio               = { version = "1", features = ["full"] }
tokio-util          = { version = "0", features = ["compat"] }
futures             = "0"
axum                = { version = "0", features = ["multipart"] }
tower-http          = { version = "0", features = ["auth", "trace", "cors"] }
teloxide            = { version = "0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
async-imap          = "0"
tokio-rustls        = "0"
rustls              = { version = "0", default-features = false, features = ["std", "tls12", "aws-lc-rs"] }
rustls-pki-types    = "1"
webpki-roots        = "1"
reqwest             = { version = "0", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "deflate"] }
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
toml                = "1"
askama              = "0"
url                 = "2"
regex               = "1"
scraper             = "0"
chrono              = { version = "0", features = ["serde"] }
uuid                = { version = "1", features = ["v4", "serde"] }
async-trait         = "0"
thiserror           = "2"
anyhow              = "1"
tracing             = "0"
tracing-subscriber  = { version = "0", features = ["env-filter", "json"] }
clap                = { version = "4", features = ["derive"] }
metrics             = "0"
metrics-exporter-prometheus = { version = "0", features = ["http-listener"] }
mime_guess          = "2"
argon2              = { version = "0.6.0-rc.7", features = ["getrandom"] }
rand                = { version = "0", features = ["std"] }
dashmap             = "6"
mime                = "0"
anodized            = { version = "0", features = ["runtime-check-and-print"] }
tempfile            = "3"
urlencoding         = "2"
base64              = "0"
rusqlite            = { version = "0", features = ["bundled"] }

[features]
test-helpers = []

[dev-dependencies]
wiremock       = "0"
flate2         = "1"
tempfile       = "3"
tower          = { version = "0", features = ["util"] }
inbox          = { path = ".", features = ["test-helpers"] }
teloxide_tests = "0"

[lints.clippy]
pedantic = "warn"
